# SPE-Expert-Amplifier-Remote-Webserver

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL-LINUX.md  INSTALL-MACOS.md  INSTALL-RPI.md  INSTALL-WINDOWS.md  LICENSE  README.md  REMOTE-ACCESS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/: cloudflared.service  install-pi.sh  spe-remoted.service
resources/: resources.qrc  web_resources.qrc
resources/web/: index.html  settings.html
resources/web/css/: app.css  settings.css
resources/web/js/: settings.js
src/: AboutDialog.cpp  AboutDialog.h  AmpController.cpp  AmpController.h  AmpFaceWidget.cpp  AmpFaceWidget.h  Auth.cpp  Auth.h  ConfigStore.cpp  ConfigStore.h  GaugeWidget.cpp  GaugeWidget.h  HttpServer.cpp  HttpServer.h  MainWindow.cpp  MainWindow.h  PowerBarWidget.cpp  PowerBarWidget.h  SettingsDialog.cpp  SettingsDialog.h  WsBridge.cpp  WsBridge.h  daemon_main.cpp  main.cpp
